--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,6 @@ body, html, .App, #root, .auth-wrapper {
 .forgot-password a {
   color: #167bff;
 }
+.Logo {
+  background-image: url(./logo.png);
+}
